stuff for other stuff

--- a/templates/posts.html
+++ b/templates/posts.html
@@ -9,7 +9,7 @@
         <div class='panel'>
             <div class="panel-footer">
                 <p class="h2">{{post}}</p><br>
-                {{value[1] | markdown}} 
+                {{value[1]}} 
             </div>
             <div class="panel-body">
                 <button onclick="window.location.href='{{value[0]}}'" class="btn btn-primary btn-sm" >
